add mobile menu

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/index.css">
     <title>Simple - простые вещи из бумаги</title>
+    <script defer src="js/index.js"></script>
   </head>
 
   <body>
@@ -58,6 +59,26 @@
               </svg>
             </button>
           </div>
+        </div>
+      </div>
+      <div class="header_mobile_menu">
+        <div class="container">
+        <nav class="nav header_nav_mobile">
+            <ul class="nav_list">
+              <il class="nav_item">
+                <a class="nav_link" href="">Продукция</a>
+              </il>
+              <il class="nav_item">
+                <a class="nav_link" href="">Материалы</a>
+              </il>
+              <il class="nav_item">
+                <a class="nav_link" href="">О нас</a>
+              </il>
+              <il class="nav_item">
+                <a class="nav_link" href="">Контакты</a>
+              </il>
+            </ul>
+          </nav>
         </div>
       </div>
       <div class="menu_bottom">
