--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <nav class="nav header_nav">
             <ul class="nav_list">
               <il class="nav_item">
-                <a class="nav_link" href="">Продукция</a>
+                <a class="nav_link" href="#products">Продукция</a>
               </il>
               <il class="nav_item">
                 <a class="nav_link" href="">Материалы</a>
@@ -66,16 +66,16 @@
         <nav class="nav header_nav_mobile">
             <ul class="nav_list">
               <il class="nav_item">
-                <a class="nav_link" href="">Продукция</a>
+                <a class="nav_link" href="#products">Продукция</a>
               </il>
               <il class="nav_item">
-                <a class="nav_link" href="">Материалы</a>
+                <a class="nav_link" href="#">Материалы</a>
               </il>
               <il class="nav_item">
-                <a class="nav_link" href="">О нас</a>
+                <a class="nav_link" href="#">О нас</a>
               </il>
               <il class="nav_item">
-                <a class="nav_link" href="">Контакты</a>
+                <a class="nav_link" href="#">Контакты</a>
               </il>
             </ul>
           </nav>
@@ -91,16 +91,16 @@
           <nav class="nav header_nav_tablet">
             <ul class="nav_list">
               <il class="nav_item">
-                <a class="nav_link" href="">Продукция</a>
+                <a class="nav_link" href="#products">Продукция</a>
               </il>
               <il class="nav_item">
-                <a class="nav_link" href="">Материалы</a>
+                <a class="nav_link" href="#">Материалы</a>
               </il>
               <il class="nav_item">
-                <a class="nav_link" href="">О нас</a>
+                <a class="nav_link" href="#">О нас</a>
               </il>
               <il class="nav_item">
-                <a class="nav_link" href="">Контакты</a>
+                <a class="nav_link" href="#">Контакты</a>
               </il>
             </ul>
           </nav>
@@ -142,7 +142,7 @@
         </div>
       </section>
 
-      <section class="info">
+      <section id="info" class="info">
         <div class="container info_container">
           <ul class="info_list">
             <li class="info_item">
@@ -184,7 +184,7 @@
         </div>
       </section>
 
-      <section class="products">
+      <section id="products" class="products">
         <div class="container products_container">
           <ul class="products_cards">
             <li class="products_item">
